HIG-357: john/hig-369-fix-devtools-clipping (#586)
* Fix clipping

* Fix clipping and borders

--- a/frontend/src/pages/Player/Toolbar/DevToolsWindow/ErrorsPage/ErrorsPage.module.scss
+++ b/frontend/src/pages/Player/Toolbar/DevToolsWindow/ErrorsPage/ErrorsPage.module.scss
@@ -6,6 +6,8 @@
 
 .errorList {
     flex-grow: 1;
+    border-left: 1px solid #eaeaea;
+    margin-left: 1px;
 }
 
 .skeleton {
